Added the module that contains the test web application (Web 2.0).

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <name>Web Testing Presentations - Parent</name>
   
   <modules>
+    <module>test-web-application</module>
     <module>test-web-site</module>
   </modules>
   
