--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,106 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <groupId>com.selesy.training.web-testing-presentations</groupId>
   <artifactId>web-testing-presentations-parent</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Web Testing Presentations - Parent</name>
-  
+
   <modules>
     <module>test-web-application</module>
     <module>test-web-site</module>
   </modules>
-  
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+
+    <version.errai>3.1.2.Final</version.errai>
+    <version.gwt>2.7.0</version.gwt>
+    <version.javaee>7.0</version.javaee>
+    <version.junit>4.12</version.junit>
+    <version.junitparams>1.0.4</version.junitparams>
+    <version.selenium>2.45.0</version.selenium>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+
+      <!-- 1 2 3 4 5 6 7 8 12345678901234567890123456789012345678901234567890123456789012345678901234567890 -->
+
+      <!-- Dependencies needed to create the Web 1.0 web site and Web 2.0 
+        web application. These sites don't need to be written in Java but it's more 
+        convenient since the test examples are predominantly written in Java. -->
+      <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>${version.javaee}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <!-- Dependencies needed to create the Web 2.0 web application. These 
+        dependencies are in addition to those listed in the section above. -->
+      <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-user</artifactId>
+        <version>${version.gwt}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-dev</artifactId>
+        <version>${version.gwt}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.errai</groupId>
+        <artifactId>errai-javaee-bom</artifactId>
+        <version>${version.errai}</version>
+      </dependency>
+
+      <!-- General test dependencies (i.e. those that are used by all types 
+        of testing described by these presentations. -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${version.junit}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>pl.pragmatists</groupId>
+        <artifactId>JUnitParams</artifactId>
+        <version>${version.junitparams}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <!-- Dependencies needed for the functional test examples that accompany 
+        the functional test presentation. -->
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>${version.selenium}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-htmlunit-driver</artifactId>
+        <version>${version.selenium}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-firefox-driver</artifactId>
+        <version>${version.selenium}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-chrome-driver</artifactId>
+        <version>${version.selenium}</version>
+        <scope>test</scope>
+      </dependency>
+
+    </dependencies>
+  </dependencyManagement>
+
 </project>
