Added the module that will contain the Selenium WebDriver functional test examples and created its initial POM and .gitignore files.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>test-web-application</module>
     <module>test-web-site</module>
+    <module>functional-test-examples</module>
   </modules>
 
   <properties>
