Added the gwt-maven-plugin to the plugin management section.

--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,11 @@
         <version>${version.gwt}</version>
       </dependency>
       <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-javaee-bom</artifactId>
+        <groupId>org.jboss.errai.bom</groupId>
+        <artifactId>errai-bom</artifactId>
         <version>${version.errai}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
       <!-- General test dependencies (i.e. those that are used by all types 
@@ -103,5 +105,17 @@
 
     </dependencies>
   </dependencyManagement>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>gwt-maven-plugin</artifactId>
+          <version>2.7.0</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
