--- a/functional-test-examples/pom.xml
+++ b/functional-test-examples/pom.xml
@@ -19,17 +19,22 @@
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
     </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.seleniumhq.selenium</groupId> -->
+<!--       <artifactId>selenium-chrome-driver</artifactId> -->
+<!--     </dependency> -->
+<!--     <dependency> -->
+<!--       <groupId>org.seleniumhq.selenium</groupId> -->
+<!--       <artifactId>selenium-firefox-driver</artifactId> -->
+<!--     </dependency> -->
+<!--     <dependency> -->
+<!--       <groupId>org.seleniumhq.selenium</groupId> -->
+<!--       <artifactId>selenium-htmlunit-driver</artifactId> -->
+<!--     </dependency> -->
     <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-chrome-driver</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-firefox-driver</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-htmlunit-driver</artifactId>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.4.1</version>
     </dependency>
   </dependencies>
   
